@@ -1,6 +1,11 @@
 2006-08-25  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	2006-01-16  Ben Elliston  <bje@au.ibm.com>
+	* gcc.dg/dfp/dfp.exp: Correct FSF address. 
+	* gcc.misc-tests/dectest.exp: Ditto.
+
+	Backport from mainline
 	2006-01-12  Janis Johnson <janis187@us.ibm.com>
 	    Yao Qi  <qiyaoltc@cn.ibm.com>
 	    Ben Elliston  <bje@au.ibm.com>
